experimental/ir/testdata/options/validate/lazy_group.proto.stderr.txt
warning: group syntax is deprecated
  --> testdata/options/validate/lazy_group.proto:6:14
   |
 6 |     optional group G1 = 1 [lazy = true] {};
   |              ^^^^^
   = note: group syntax is not available in proto3 or editions

warning: group syntax is deprecated
  --> testdata/options/validate/lazy_group.proto:7:14
   |
 7 |     optional group G2 = 2 [lazy = false] {};
   |              ^^^^^
   = note: group syntax is not available in proto3 or editions

error: expected length-prefixed field
  --> testdata/options/validate/lazy_group.proto:6:5
   |
 6 |     optional group G1 = 1 [lazy = true] {};
   |     ^^^^^^^^^-----^^^^^^^^^----^^^^^^^^^^^
   |               |             |
   |               groups are not length-prefixed
   |                             |
   |                             `lazy` set here
   |
   = help: `lazy` only makes sense for length-prefixed messages

warning: expected length-prefixed field
  --> testdata/options/validate/lazy_group.proto:7:5
   |
 7 |     optional group G2 = 2 [lazy = false] {};
   |     ^^^^^^^^^-----^^^^^^^^^----^^^^^^^^^^^^
   |               |             |
   |               groups are not length-prefixed
   |                             |
   |                             `lazy` set here
   |
   = help: `lazy` only makes sense for length-prefixed messages

encountered 1 error and 3 warnings
